--- a/client/src/style/Recommended.css
+++ b/client/src/style/Recommended.css
@@ -1,11 +1,13 @@
 .recVideo__container {
     margin-left: 30px;
+    padding: 30px 0px;
 }
 
 .recVideo__videoContainer {
     display: flex;
     flex-wrap: wrap;
     margin-top: 30px;
+    overflow-y: scroll;
 }
 
 .recVideo__videoContainer > * {
